--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,10 +33,17 @@ android {
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
+android {
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_15
+        targetCompatibility = JavaVersion.VERSION_15
     }
+
+    kotlinOptions {
+        jvmTarget = "15"
+    }
+}
+
 
     defaultConfig {
         applicationId = "com.example.mind_sage"
