--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
+        ext.kotlin_version = '2.0.20' // Certifique-se de que está usando uma versão recente
+
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0" // Replace with latest compatible version
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
